--- a/aide.html
+++ b/aide.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html><html lang="fr"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 <title>ChronoVitesse — Aide</title><link rel="stylesheet" href="styles.css"></head>
 <body><div class="container">
-<header><h1>❓ Aide — Protocoles & usage</h1><div class="actions"><a class="btn" href="index.html">🏠 Accueil</a></div></header>
+<header><h1>❓ Comprendre les tests</h1><div class="actions"><a class="btn" href="index.html">🏠 Accueil</a></div></header>
 <div class="card"><div class="content">
-  <h2>Navette 20 m</h2><p>« Beep test / Léger‑Boucher » : bips à chaque 20 m, palier +0,5 km/h/min. VMA ≈ dernier palier tenu.</p>
-  <h2>45/15</h2><p>Intermittent 45 s travail / 15 s repos. À chaque nouveau palier, +0,5 km/h. VMA ≈ dernier palier tenu.</p>
-  <h2>Cooper / Demi‑Cooper</h2><p>12 ou 6 minutes. Vitesse moyenne = VMA estimée.</p>
-  <h2>VAMEVAL</h2><p>Vitesse progressive +0,5 km/h/min, bips 20 m. L’élève retient le dernier palier tenu = VMA.</p>
+  <h2>Navette 20 m (Beep test / Léger‑Boucher)</h2>
+  <ol>
+    <li>Deux lignes distantes de <strong>20 m</strong>. Tu vas <strong>ligne → ligne</strong> en suivant les bips.</li>
+    <li>À chaque bip, tu dois être <strong>sur la ligne</strong>. Un bip <em>long</em> = nouveau palier.</li>
+    <li>La vitesse augmente de <strong>+0,5 km/h toutes les minutes</strong>.</li>
+    <li>Si tu rattes la ligne <strong>deux fois de suite</strong> → tu t’arrêtes.</li>
+    <li>Ta <strong>VMA</strong> = la <strong>vitesse du dernier palier</strong> que tu as entièrement tenu.</li>
+  </ol>
+  <p class="help">Exemple : départ 8,5 km/h. Palier 2 = 9,0 km/h, palier 3 = 9,5 km/h, etc.</p>
+
+  <h2>45 / 15</h2>
+  <ol>
+    <li><strong>45 s</strong> de course + <strong>15 s</strong> de repos = 1 cycle.</li>
+    <li>À chaque nouveau palier, la vitesse cible monte de <strong>+0,5 km/h</strong>.</li>
+    <li>Tu gardes ton allure pendant les 45 s. Si tu lâches, tu es noté au palier précédent.</li>
+    <li>VMA estimée = vitesse du <strong>dernier palier respecté</strong>.</li>
+  </ol>
+
+  <h2>Cooper (12’)/Demi‑Cooper (6’)</h2>
+  <p>Tu cours <strong>en continu</strong> pendant 12’ (ou 6’). On additionne les tours : la <strong>vitesse moyenne</strong> sur la durée donne une estimation de la VMA.</p>
+</div></div>
+
+<div class="card"><div class="content">
+  <h2>Mode d’emploi « Prof » en classe entière</h2>
+  <ol>
+    <li>Allez dans <strong>Espace Prof → Classe</strong> : ajoutez/importez vos élèves (CSV possible).</li>
+    <li>Lancez <strong>Navette 20 m</strong> ou <strong>45/15</strong>.</li>
+    <li>Quand un élève <strong>sort</strong>, <strong>cliquez son nom</strong> : sa <strong>VMA</strong> est pré‑remplie à la vitesse/palier du moment → validez (et notez l’observateur si besoin).</li>
+    <li>En fin de séance : <strong>Export CSV</strong> + QR individuels si souhaité.</li>
+  </ol>
 </div></div>
 </div><div class="footer">ChronoVitesse - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</div></body></html>
