--- a/chrono-simple.html
+++ b/chrono-simple.html
@@ -4,16 +4,20 @@
 <header><h1>⏱️ Chrono simple</h1><div class="actions"><a class="btn" href="eleve.html">⬅️ Retour</a></div></header>
 <div class="card"><div class="content center" style="gap:20px;flex-direction:column">
   <div class="timer" id="circle"><div class="center"><div class="time" id="time">00:00.000</div><div class="hint" id="idInfo"></div></div><div class="hand" id="hand"></div></div>
-  <div class="actions"><button class="btn ok big" id="start">▶️ Start</button><button class="btn warn big" id="pause">⏸ Pause</button><button class="btn danger big" id="reset">⟲ Reset</button></div>
+  <div class="bigbar">
+    <button class="btn ok big" id="start">▶️ Démarrer</button>
+    <button class="btn warn big" id="stop">⏹️ Stop</button>
+    <button class="btn big" id="lap">➕ +1 tour</button>
+  </div>
   <div class="grid-3" style="width:100%">
     <div><label>Piste (m)</label><input class="input" id="lapm" type="number" value="200"></div>
     <div class="kpi"><div class="big" id="laps">0</div><div class="label">Tours</div></div>
     <div class="kpi"><div class="big" id="dist">0 m</div><div class="label">Distance</div></div>
   </div>
-  <div class="actions"><button class="btn" id="addLap">+ 1 tour</button></div>
+  <div class="help keytips">⎵ Espace = start/stop • L = +1 tour • F = plein écran</div>
   <div class="qrbox"><div id="qr"></div><div class="actions"><button class="btn ok" id="makeQR">🧾 QR</button><button class="btn primary" id="saveQR">⬇️ PNG</button></div></div>
 </div></div>
-</div><div class="footer">ChronoVitesse - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</div>
+<div class="footer">ChronoVitesse - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 <script>
 const $ = (id)=>document.getElementById(id);
@@ -41,7 +45,7 @@ function downloadQR(boxId, name='qr-scanprof.png'){
   const a=document.createElement('a'); a.href=url; a.download=name; document.body.appendChild(a); a.click(); a.remove();
 }
 function setTimerCircle(elemId, pct){
-  const deg=Math.max(0,Math.min(100,pct))*3.6; const el=$(elemId); el.style.background=`conic-gradient(var(--accent) ${deg}deg, #e5e7eb ${deg}deg)`;
+  const deg=Math.max(0,Math.min(100,pct))*3.6; const el=$(elemId); el.style.background=`conic-gradient(var(--accent) ${deg}deg, #1f2937 ${deg}deg)`;
 }
 function formatMS(ms){ const m=Math.floor(ms/60000), s=Math.floor((ms%60000)/1000), z=Math.floor(ms%1000); return String(m).padStart(2,'0')+':'+String(s).padStart(2,'0')+'.'+String(z).padStart(3,'0'); }
 </script>
@@ -50,10 +54,11 @@ function formatMS(ms){ const m=Math.floor(ms/60000), s=Math.floor((ms%60000)/100
 const id = identity(); document.getElementById('idInfo').textContent=id.nom+' '+id.prenom+' — '+id.classe;
 let running=false, start=0, elapsed=0, laps=0, distance=0;
 function loop(){ if(!running) return; const t=performance.now()-start+elapsed; document.getElementById('time').textContent=formatMS(t); const sec=(t/1000)%60; document.getElementById('hand').style.transform=`translate(-50%,-100%) rotate(${sec/60*360}deg)`; requestAnimationFrame(loop); }
-document.getElementById('start').onclick=()=>{ if(!running){ running=true; start=performance.now(); loop(); } };
-document.getElementById('pause').onclick=()=>{ if(running){ elapsed+=performance.now()-start; running=false; } };
-document.getElementById('reset').onclick=()=>{ running=false; start=0; elapsed=0; laps=0; distance=0; document.getElementById('time').textContent='00:00.000'; document.getElementById('laps').textContent='0'; document.getElementById('dist').textContent='0 m'; setTimerCircle('circle',0); };
-document.getElementById('addLap').onclick=()=>{ const m=Number(document.getElementById('lapm').value||0); laps++; distance+=m; document.getElementById('laps').textContent=String(laps); document.getElementById('dist').textContent=distance+' m'; };
+function toggle(){ if(running){ elapsed+=performance.now()-start; running=false; } else { running=true; start=performance.now(); loop(); } }
+document.getElementById('start').onclick=()=>{ if(!running) toggle(); };
+document.getElementById('stop').onclick=()=>{ if(running) toggle(); };
+document.getElementById('lap').onclick=()=>{ const m=Number(document.getElementById('lapm').value||0); laps++; distance+=m; document.getElementById('laps').textContent=String(laps); document.getElementById('dist').textContent=distance+' m'; };
 document.getElementById('makeQR').onclick=()=>{ const t=(running?performance.now()-start:0)+elapsed; const data=payloadDistance({distance, tempsMs:t}); const txt=showQR('qr', data); navigator.clipboard?.writeText(txt); };
 document.getElementById('saveQR').onclick=()=>downloadQR('qr');
+document.addEventListener('keydown',(e)=>{ if(e.code==='Space'){ e.preventDefault(); toggle(); } if(e.key.toLowerCase()==='l'){ e.preventDefault(); document.getElementById('lap').click(); } if(e.key.toLowerCase()==='f'){ document.documentElement.requestFullscreen&&document.documentElement.requestFullscreen(); } });
 </script></body></html>
